--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div style="height: 100px; background-color: rgba(247, 244, 244, 0.1);">
             <div class="container p-4">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a href="index.html"><img src="circle-bird-indigo.svg" class="img-fluid set"></a>
-                    <a href="index.html"><img src="laskie-text-indigo.svg" class="img-fluid mx-3 d-none d-lg-block"
+                    <a href="workInBootstrap/index.html"><img src="circle-bird-indigo.svg" class="img-fluid set"></a>
+                    <a href="workInBootstrap/index.html"><img src="laskie-text-indigo.svg" class="img-fluid mx-3 d-none d-lg-block"
                             style="height:30px"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -29,11 +29,11 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mr-auto" style="font-size:20px">
                             <li class="nav-item active">
-                                <a class="nav-link text-primary active" href="comapny.html">For Companies<span
+                                <a class="nav-link text-primary active" href="workInBootstrap/comapny.html">For Companies<span
                                         class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-primary active" href="about.html">About</a>
+                                <a class="nav-link text-primary active" href="workInBootstrap/about.html">About</a>
                             </li>
                         </ul>
                         <div class="dropdown-divider"></div>
